[package]
name = "image-ed"
version = "0.1.0"
authors = ["ethiclesshacker <mailingadityavs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.23.13"
imageproc = "0.22.0"
rusttype = "0.9.2"
wasm-bindgen = "0.2.70"
web-sys = { version = "0.3.47", features=["console"] }
